--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="menu_cycle">Cycle</string>
     <string name="menu_star">Star</string>
     <string name="menu_setting">Setting</string>
+    <string name="open">open</string>
 </resources>
